# DiffDx

./: .gitignore  PRESENTATION.md  README.md  phase8_notes.md  railway.toml  render.yaml
loop1/: .gitignore  CLAUDE.md  Procfile  README.md  Residual_phase3.md  SYSTEM_DOCS.md  config.yaml  demo.py  demo_with_critic.py  phase10_notes.md  phase3_notes.md  phase4_notes.md  phase5_notes.md  phase6_notes.md  phase7_claudecode_brief.md  phase7_findings.md  phase7_notes.md  phase9_notes.md  pyproject.toml  requirements-web.txt  requirements.txt  run_web.py
loop1/data/: disease_specialty_map.json
loop1/exemplars/: ex_abrs_001.json  ex_aom_001.json  ex_appendicitis_001.json  ex_biliary_colic_001.json  ex_cauda_equina_screen_001.json  ex_cellulitis_001.json  ex_cvst_001.json  ex_dvt_from_trauma_001.json  ex_epistaxis_001.json  ex_etd_001.json  ex_hoarseness_001.json  ex_inflammatory_back_001.json  ex_measles_001.json  ex_oe_001.json  ex_patient_question_handling_001.json  ex_peds_fb_001.json  ex_peds_travel_contact_001.json  ex_pericarditis_001.json  ex_pregnancy_001.json  ex_pta_001.json  ex_pulmonary_embolism_001.json  ex_sle_screen_001.json  ex_ssnhl_001.json  ex_stimulant_acs_001.json  ex_vertigo_001.json
loop1/prompts/: compressor_v0_1.txt  compressor_v0_2.txt  critic_turn_v0_1.txt  doctor_v0_1.txt  doctor_v0_2.txt  doctor_v0_3.txt  doctor_v0_4.txt  doctor_v0_5.txt  doctor_v0_6.txt  profile_updater_v0_1.txt  profile_updater_v0_2.txt  profile_updater_v0_3.txt  simulated_patient_v0_1.txt
loop1/scripts/: bake_off.py  curate_eval_set.py  diagnose_confidence.py  (+9 more)
(+76 files in other folders)
