[project]
name = "loop1"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "groq>=1.2.0",
    "pandas>=3.0.3",
    "anthropic>=0.28.0",
    "transformers==4.46.3",
    "fastembed>=0.8.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loop1", "src/loop2", "src/loop3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
